<resources>
    <string name="app_name">Заметки</string>

    <string name="create_note">Создать</string>
    <string name="delete_note">Удалить заметку</string>
    <string name="edit_note">Редактировать</string>
    <string name="done_create">Готово</string>

    <string name="new_note_title">Новая заметка</string>
    <string name="edit_note_title">Редактировать заметку</string>
    <string name="title_note">Заголовок заметки</string>
    <string name="note">Заметка</string>

    <string name="drawer_item_all">Все</string>
    <string name="drawer_item_work">Работа</string>
    <string name="drawer_item_home">Дом</string>
    <string name="drawer_item_create">Создать</string>
    <string name="drawer_menu_info">Информация</string>
    <string name="drawer_item_info">О программе</string>
    <string name="drawer_menu_manager">Управление</string>
    <string name="drawer_item_delete">Удалить</string>

    <string name="upload_img">Прикрепить изображение</string>
    <string name="close_with_out_save">Закрыть без сохранения</string>
    <string name="gallery">Галерея</string>
    <string name="camera">Камера</string>
    <string name="add_image">Добавить изображение</string>

    <string name="item_del">Удалить</string>
    <string name="item_edit">Редактировать</string>

    <string name="buttonDel">Удалить</string>
    <string name="buttonCancel">Отмена</string>
    <string name="attention">Внимание!</string>
    <string name="messageDeleteDialog">Вы действительно хотите удалить заметку</string>
    <string name="messageDeleteAllNotesDialog">Вы действительно хотите удалить все заметки?</string>
    <string name="incorrect_data_dialog_message">
        Текс заметки не заполнен!
        Нажав на кнопку Продолжить, вся введенная вами информация будет удалена.
    </string>

    <string name="button_continue">Продолжить</string>
    <string name="snack_bar_message_delete">Заметка удалена</string>
    <string name="snack_bar_button_undo">Отменить</string>
    <string name="snackBarMessage">Не возможно добавить пустую заметку!</string>

    <string name="delete_all_notes">Удалить все заметки</string>

    <string name="str_problems_message">Проблемы с отображением изображения</string>
    <string name="str_problems_save">Поблемы при сохранение изображения</string>
    <string name="cant_add_note_message">Невозможно добавить заметку</string>
    <string name="string_ok">OK</string>
    <string name="imageDeleted">Изображение Удалено</string>
    <string name="undo">Восстановить</string>
    <string name="reUndo">Восстановлено</string>

    <string name="sort_by_date">Сортировать по дате</string>
    <string name="sort_by_name">Сортировать по названию</string>
    <string name="asc_date">Сначала новые</string>
    <string name="desc_date">Сначала старые</string>
    <string name="asc_name">От А до Я</string>
    <string name="desc_name">От Я до А</string>
    <string name="button_agree">Принять</string>
    <string name="button_disagree">Отклонить</string>
    <string name="select_type_order">Выберите тип упорядочивания</string>
</resources>
