<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/radioGroupDate"
            android:orientation="vertical">

        <RadioButton
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asc_date"
                android:id="@+id/radioButtonASCDate"/>
        <RadioButton
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_date"
                android:id="@+id/radioButtonDESCDate"/>
    </RadioGroup>

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/radioGroupName"
            android:orientation="vertical">

        <RadioButton
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asc_name"
                android:id="@+id/radioButtonASCName"/>
        <RadioButton
                android:layout_margin="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desc_name"
                android:id="@+id/radioDESCName"/>
    </RadioGroup>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_button"
            android:layout_below="@+id/radioGroupName"
            android:layout_marginTop="24dp">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_disagree"
                android:padding="8dp"
                android:id="@+id/button_negative"
                android:textColor="@color/colorButtonTextInDialog"
                style="?android:attr/borderlessButtonStyle"
                android:layout_alignTop="@+id/button_positive"
                android:layout_toLeftOf="@+id/button_positive"
                android:layout_toStartOf="@+id/button_positive"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_agree"
                android:id="@+id/button_positive"
                android:padding="8dp"
                android:textColor="@color/colorButtonTextInDialog"
                android:layout_margin="8dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                style="?android:attr/borderlessButtonStyle"/>
    </RelativeLayout>
</RelativeLayout>